--- a/Contract_chatbot.ipynb
+++ b/Contract_chatbot.ipynb
@@ -978,7 +978,7 @@
         }
       ],
       "source": [
-        "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"]=os.getenv('HUGGING_FACE_TOKEN')\n",
+        "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"]=\"PASTE_API_KEY_FROM_ZIP_FILE\"\n",
         "model_id = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
         "\n",
         "# Initialize the model with the correct task without overriding\n",
@@ -1412,7 +1412,7 @@
         "    global llm_hub, embeddings\n",
         "\n",
         "    # Set up the environment variable for HuggingFace and initialize the desired model\n",
-        "    os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"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\"\n",
+        "    os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"PASTE_API_KEY_FROM_ZIP_FILE\"\n",
         "    model_id = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
         "\n",
         "    # Initialize the model with the correct task without overriding\n",
@@ -1585,7 +1585,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.12"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
